--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="8dp"
     tools:context=".UserInfoActivity">
 
@@ -16,50 +15,68 @@
 
     <TextView
         android:id="@+id/userName"
+        style="@style/TextView.Primary.Header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="TextView" />
+        android:layout_below="@id/userImage"
+        android:layout_marginTop="@dimen/text_small_margin"
+        android:text="@string/name_hint" />
 
     <TextView
         android:id="@+id/userNickName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="TextView" />
+        style="@style/TextView.Secondary"
+        android:layout_below="@id/userName"
+        android:layout_marginTop="@dimen/text_small_margin"
+        android:text="@string/nickname_hint" />
 
     <TextView
         android:id="@+id/userDescription"
+        style="@style/TextView.Primary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="TextView" />
+        android:layout_below="@id/userNickName"
+        android:layout_marginTop="@dimen/text_small_margin"
+        android:text="@string/description_hint" />
 
     <TextView
         android:id="@+id/userLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="TextView" />
+        style="@style/TextView.Secondary"
+        android:layout_below="@id/userDescription"
+        android:layout_marginTop="@dimen/text_small_margin"
+        android:text="@string/location_hint"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/userFollowingCount"
+        android:layout_below="@id/userLocation"
+        style="@style/TextView.Primary"
+        android:layout_marginTop="@dimen/text_small_margin"
+        android:text="1" />
 
-        <TextView
-            android:id="@+id/userFollowing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:text="TextView" />
+    <TextView
+        android:id="@+id/userFollowing"
+        android:layout_below="@id/userLocation"
+        android:layout_toEndOf="@id/userFollowingCount"
+        android:layout_marginStart="@dimen/text_small_margin"
+        style="@style/TextView.Secondary"
+        android:layout_marginTop="@dimen/text_small_margin"
+        android:text="@string/followings_hint" />
 
-        <TextView
-            android:id="@+id/userFollowers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/userFollowersCount"
+        android:layout_below="@id/userLocation"
+        android:layout_toEndOf="@id/userFollowing"
+        android:layout_marginStart="20dp"
+        style="@style/TextView.Primary"
+        android:layout_marginTop="@dimen/text_small_margin"
+        android:text="2" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/userFollowers"
+        style="@style/TextView.Secondary"
+        android:layout_below="@id/userLocation"
+        android:layout_toEndOf="@id/userFollowersCount"
+        android:layout_marginStart="@dimen/text_small_margin"
+        android:layout_marginTop="@dimen/text_small_margin"
+        android:text="@string/followers_hint" />
+
+</RelativeLayout>
