--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/userImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -39,16 +39,26 @@
         android:text="@string/description_hint" />
 
     <TextView
+        android:id="@+id/userLocationIcon"
+        style="@style/TextIcon"
+        android:layout_below="@id/userDescription"
+        android:layout_marginTop="@dimen/text_small_margin"
+        android:text="@string/fa_map_marker" />
+
+    <TextView
         android:id="@+id/userLocation"
         style="@style/TextView.Secondary"
         android:layout_below="@id/userDescription"
+        android:layout_alignBaseline="@+id/userLocationIcon"
+        android:layout_marginStart="@dimen/text_small_margin"
         android:layout_marginTop="@dimen/text_small_margin"
-        android:text="@string/location_hint"/>
+        android:layout_toEndOf="@id/userLocationIcon"
+        android:text="@string/location_hint" />
 
     <TextView
         android:id="@+id/userFollowingCount"
         android:layout_below="@id/userLocation"
-        style="@style/TextView.Primary"
+        style="@style/TextView.Primary.Bold"
         android:layout_marginTop="@dimen/text_small_margin"
         android:text="1" />
 
@@ -66,7 +76,7 @@
         android:layout_below="@id/userLocation"
         android:layout_toEndOf="@id/userFollowing"
         android:layout_marginStart="20dp"
-        style="@style/TextView.Primary"
+        style="@style/TextView.Primary.Bold"
         android:layout_marginTop="@dimen/text_small_margin"
         android:text="2" />
 
