--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,4 +52,8 @@
         <item name="android:textColor">@android:color/darker_gray</item>
     </style>
 
+    <style name="TextIcon" parent="TextView.Secondary">
+        <item name="android:fontFamily">@font/font_awesome</item>
+    </style>
+
 </resources>
